# claude-code-multi

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  ccc  ccm.sh  ccm.sh.deprecated  ccm_config.example  ccm_services.template  check-env.ps1  install-ps.ps1  install.sh  install.sh.deprecated  pyproject.toml  quick-install.sh.deprecated  test-ccm.ps1  uninstall.sh.deprecated
bak/: .ccm_services.toml
docs/: CORE_RULES.md  NEW_CONFIG_FORMAT.md  README_INDEX.md  WINDOWS_INSTALL.md
docs/plans/glm/: PLAN.md  REQUIREMENTS.md
src/ccm/: __init__.py  __main__.py  cli.py  config.py  launcher.py
src/ccm/accounts/: __init__.py  keychain.py  manager.py
src/ccm/config/: __init__.py  services.py
src/ccm/providers/: __init__.py  ali.py  base.py  claude.py  deepseek.py  glm.py  kimi.py  minimax.py  openrouter.py  seed.py  stepfun.py
src/ccm/settings/: __init__.py  project.py  user.py
tests/: test_model_variant.sh  test_providers.py
